kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tour-management-service
  namespace: tour-management
  labels:
    app: tour-management
    service: tour-management
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tour-management
  sessionAffinity: None
